--- a/FGPA-03.ipynb
+++ b/FGPA-03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "id": "2fe900d7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "id": "21e3cd42",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "id": "f36bcb73",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "id": "110e8bde",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "id": "20d845e1",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 29,
    "id": "4dbb5c71",
    "metadata": {},
    "outputs": [],
@@ -81,36 +81,38 @@
     "        return int_num + 1 if num >= 0 else int_num - 1\n",
     "    return int_num\n",
     "\n",
+    "def decToBinary(dec):\n",
+    "   return np.binary_repr(dec,17)\n",
+    "\n",
     "def fixedPoint(num, m, n):\n",
     "  scale = 2**n\n",
     "  fixed_int = round_to_int(num*scale)\n",
-    "  quantized = fixed_int/scale\n",
-    "  return quantized\n",
+    "  return decToBinary(fixed_int)\n",
     "def quantize(samples,m,n):\n",
     "  arr = []\n",
     "  for i in range(len(samples)):\n",
     "    arr.append(fixedPoint(samples[i],m,n))\n",
-    "  arr = np.array(arr)\n",
+    "  arr = np.array(arr,dtype=str)\n",
     "  return arr\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 35,
    "id": "e5f0e3b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "q_3_14 = quantize(samples,3,14)\n",
-    "q_15_2 = quantize(samples,15,2)\n",
+    "q_5_12 = quantize(samples,5,12)\n",
     "\n",
-    "np.savetxt('q_3_14.txt', q_3_14)\n",
-    "np.savetxt('q_15_2.txt', q_15_2)"
+    "np.savetxt('q_3_14.txt', q_3_14,fmt='%s')\n",
+    "np.savetxt('q_5_12.txt', q_5_12,fmt='%s')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "835349c6",
    "metadata": {},
    "outputs": [],
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 11,
    "id": "6799c242",
    "metadata": {},
    "outputs": [],
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 12,
    "id": "c445a511",
    "metadata": {},
    "outputs": [
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 13,
    "id": "c845870a",
    "metadata": {},
    "outputs": [
